--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <img class="img-fluid q2" src="IMAGE/1.png" alt="">
+          <a class="q3" href="">Search Item here</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -30,7 +31,7 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              
               <button class="btn btn-outline-success" type="submit">Connect Wallet </button>
             </form>
           </div>
