--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <img class="img-fluid q2" src="IMAGE/1.png" alt="">
-          <a class="q3" href="">Search Item here</a>
+          <div class="q4">
+            <a class="q3" href="">Search Item here ...</a>
+        </div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+                
+                <li class="nav-item">
                 <a class="nav-link " aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
