--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
           </div>
         </div>
       </nav>
+      <div class="row py-3">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6">
+            <img class="img-fluid q5" src="IMAGE/2.png" alt="">
+        </div>
+      </div>
 </div>
    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
