--- a/index.html
+++ b/index.html
@@ -40,25 +40,33 @@
           </div>
         </div>
       </nav>
-      <div class="row py-3">
+      <div class="row py-4">
         <div class="col-lg-6">
-            <h5 class="q6">
+            <h5 class="q6 mt-5">
                 GIGALAND MARKET</h5>
                 <h1 class="q7 mt-3">Create, sell and collect<br>digital items.</h1>
                 <p class="q8 mt-3">Unit of data stored on a digital ledger, called a blockchain, that<br>certifies a digital asset to be unique and therefore not<br>interchangeable
 
                 </p>
-                <form class="d-flex mt-3" role="search">
+                <form class="d-flex mt-3 " role="search">
               
                     <button class="btn btn-outline-success" type="submit">Connect Wallet </button>
                   </form>
                   <div class="row mt-5">
 <div class="col-lg-4">
-    <h1 class="q9">94215<br>
-        Collectibles</h1>
+    <h3 class="q9">94215<br>
+        Collectibles</h3>
 </div>
-<div class="col-lg-4"></div>
-<div class="col-lg-4"></div>
+<div class="col-lg-4">
+    <h3 class="q9">27k
+        <br>
+        Auctions</h3>
+</div>
+<div class="col-lg-4">
+    <h3 class="q9">4k
+        <br>
+        NFT Artist</h3>
+</div>
                   </div>
         </div>
         <div class="col-lg-6">
