--- a/index.html
+++ b/index.html
@@ -201,6 +201,16 @@
 </div>
         </div>
     </div>
+    <div class="container py-4">
+<div class="row py-5">
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/3.png" alt="">
+<h3 class="e3 mt-3">Metamask</h3>
+        </div>
+    </div>
+</div>
+    </div>
    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
