--- a/index.html
+++ b/index.html
@@ -209,6 +209,37 @@
 <h3 class="e3 mt-3">Metamask</h3>
         </div>
     </div>
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/4.png" alt="">
+<h3 class="e3 mt-3">Bitsikamr</h3>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/5.png" alt="">
+<h3 class="e3 mt-3">Fortmatic</h3>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/6.png" alt="">
+<h3 class="e3 mt-3">Wallat an</h3>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/7.png" alt="">
+<h3 class="e3 mt-3">Coin aswe</h3>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="e1 shadow">
+<img class="e2" src="IMAGE/8.png" alt="">
+<h3 class="e3 mt-3">Arkane nr</h3>
+        </div>
+    </div>
+
 </div>
     </div>
    </div>
