--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         </div>
     </div>
     <div class="container py-4">
+        <h1 class="w2">Hot Collections</h1>
 <div class="row py-5">
     <div class="col-lg-2">
         <div class="e1 shadow">
